1.修改工作流统一待办bug 2.优化cms发布日志记录方式 3.解决url标签指定的频道不存在时，导致频道首页发布失败问题